# tr-academic-nlp

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  DERIVATION.md  LICENSE  PRIVACY.md  README.md  pyproject.toml  turkce-akademi-CIKTILAR.md  turkce-akademi-YOL-HARITASI.md
.github/workflows/: ci.yml
data/derive/: load_umutertugrul.py
data/labeling/: auto_label.py  conll_writer.py  entity_types.py  llm_label.py  regex_rules.py
docs/: ARCHITECTURE.md  EXTENSION.md  PERFORMANCE.md  learning-log.md
docs/labeler-eval/: api-sonnet-100-fixed.jsonl  api-sonnet-100.jsonl  cli-haiku-B.jsonl  cli-kiro-haiku-B-final.jsonl  cli-smoke.jsonl  comparison.md  labeler-eval-claude-opus-chat.json  labeler-eval-gemini.json  labeler-eval-summary.md  review_decisions.jsonl
models/embed/: train.py
models/ner/: jsonl_to_conll.py  label_mapping.json  prepare_data.py  train.py
scripts/: KIRO_INSTRUCTIONS.md  KIRO_QUICK_REF.txt  _compare_labeler_runs.py  _emit_claude_chat_eval.py  batch_label_via_anthropic_api.py  batch_label_via_claude_cli.py  eval_labelers.py  fix_ner_labels.py  fix_offsets.py  github_push.py  hf_push_index.py  hf_push_ner.py  hf_push_space.py  kiro_test_prompt_tr.txt  merge_labeled.py  parquet_to_jsonl.py  review_app.py  run_kiro_safe.bat  run_labeling_for_kiro.bat  run_labeling_for_kiro.py  sample_paragraphs.jsonl  sample_paragraphs_small.jsonl  test_pipeline.py  test_rag_pipeline.py  to_doccano.py  to_label_studio.py
sdk/tr_academic_nlp/: __init__.py  anonymizer.py  pipeline.py  rag.py
sdk/tr_academic_nlp/prompts/: system_prompts.py
space/: README.md  app.py  requirements.txt
tests/: conftest.py
tests/integration/: test_derive_pipeline.py
tests/unit/: test_auto_label.py  test_conll_writer.py  test_derive_filters.py  test_entity_types.py  test_llm_label.py  test_regex_rules.py  test_smoke.py
