[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tr-academic-nlp"
version = "0.0.1"
description = "Turkish Academic NLP Toolkit — fine-tuned models, RAG, AI detection, and Anthropic Claude Skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Hakan Sabunis", email = "hakansabunis@gmail.com" }
]
keywords = ["turkish", "academic", "nlp", "rag", "ner", "embedding", "huggingface", "anthropic", "claude", "skills"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]

dependencies = [
    "transformers>=4.45,<5.0",
    "sentence-transformers>=3.0,<4.0",
    "torch>=2.2,<3.0",
    "datasets>=2.20,<4.0",
    "huggingface_hub>=0.25,<1.0",
    "chromadb>=0.5,<1.0",
    "pypdf>=4.0,<6.0",
    "tqdm>=4.66",
    "pydantic>=2.7,<3.0"
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8"]
web = ["httpx>=0.27", "beautifulsoup4>=4.12"]
quantize = ["bitsandbytes>=0.43", "accelerate>=0.33"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-tqdm",
    "pre-commit>=3.7"
]

[project.urls]
Homepage = "https://github.com/hakansabunis/tr-academic-nlp"
Documentation = "https://github.com/hakansabunis/tr-academic-nlp#readme"
Issues = "https://github.com/hakansabunis/tr-academic-nlp/issues"
HuggingFace = "https://huggingface.co/hakansabunis"

[tool.setuptools.packages.find]
where = ["sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "perf: performance budget tests (slow)",
    "integration: integration tests (require models)",
    "property: hypothesis-based property tests"
]
